--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,22 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+#loginModal {
+  color: floralwhite; }
+  #loginModal #modalHeader {
+    background: #512DA8; }
+
+#ReservationModal {
+  color: floralwhite; }
+  #ReservationModal .modal-header {
+    background: #512DA8; }
+
+.modal-body {
+  background: #D1C4E9; }
+
+#modalText {
+  color: black; }
+
+.close {
+  color: floralwhite; }
