--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,3 +74,31 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+#loginModal {
+    color: floralwhite;
+
+    #modalHeader{
+        background: $background-dark;
+    }
+}
+
+#ReservationModal {
+    color: floralwhite;
+
+    .modal-header {
+        background: $background-dark;
+    }
+}
+
+.modal-body {
+    background: $background-pale;
+}
+
+#modalText {
+    color: black;
+}
+
+.close {
+    color: floralwhite;
+}
